# gllc2

./: .clang-format  .clangd  .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  PROGRESS.md  README.md  alloc.c  alloc.h  arc.c  arc.h  block.c  block.h  circle.c  circle.h  draw.c  draw.h  draw__.c  draw__.h  drawing.c  drawing.h  engine.h  entbuildutil.c  entbuildutil.h  entity.c  entity.h  entity_vertex.h  event.c  event.h  filling.c  filling.h  font.h  layer.c  layer.h  lb.c  lb.h  linalg.c  linalg.h  (+48 more)
cglm/include/cglm/: affine-pre.h
docs/: LiteCAD.chm  LiteCAD.chw
examples/: CMakeLists.txt
examples/basic/: CMakeLists.txt  main.c
examples/basic_gtk/: CMakeLists.txt  main.c
examples/basic_win32/: CMakeLists.txt  main.c
examples/python/: #floorplan.dxf  .gitignore  litecad.py  main.py  test.py  Отметка -250 каркасы.dxf
examples/python/lc/: litecad_199.py  old_litecad.py
examples/python1/: main.py
include/: arc.h  bezier.h  block.h  blockattr.h  circle.h  cmd.h  color.h  debug.h  draw.h  drawing.h  entbuildutil.h  entity.h  entity_vertex.h  event.h  filling.h  font.h  glad.h  glyph.h  khrplatform.h  layer.h  linalg.h  line.h  linebuild.h  linetype.h  litecad.h  named_object.h  object.h  platform.h  point.h  polyline.h  rect.h  sparsegrid.h  text.h  textbuild.h  textstyle.h  ui_cursor.h  ui_grid.h  ui_ptbuf.h  ui_selection.h  ui_vertex_buffer.h  (+2 more)
pythonapi/: litecad.py
shaders/: frag.frag  frag.glsl  vert.glsl  vert.vert
src/: arc.c  block.c  blockattr.c  circle.c  cmd.c  color.c  debug.c  draw.c  drawing.c  entbuildutil.c  entity.c  event.c  filling.c  font.c  glad.c  layer.c  linalg.c  line.c  linebuild.c  linetype.c  litecad.c  named_object.c  object.c  platform.c  platform_gtk.c  platform_wayland.c  platform_webgl.c  platform_windows.c  platform_x11.c  point.c  polyline.c  rect.c  sparsegrid.c  text.c  textbuild.c  textstyle.c  ui_cursor.c  ui_grid.c  ui_ptbuf.c  ui_selection.c  (+2 more)
src/tess2/: dict.h  mesh.h  priorityq.c  tess.c  tess.h
tess2/: bucketalloc.c  bucketalloc.h  dict.c  priorityq.h
test/: test_block.c  test_block_init.c  test_color_behavior.c  test_entity.c  test_entity_init.c  test_entity_type.c  test_layer.c  test_layer_init.c
tools/: gen_font_h.c  gen_shader_h.c  xxdi.py
